# AI_Chatbot

./: .gitignore  README.md  docker-compose.yml  dummy_expense.txt  print_events.py  pyproject.toml  render.yaml  reproduce.py  reproduce_hr.py  run_router.py  tail_logs.py  test.py  test_search.py  test_sse.py  test_stream.py  test_stream_client.py
alembic/: env.py
alembic/versions/: d69f128ed5d7_initial_schema.py
api/: main.py
api/routes/: chat.py  conversations.py  documents.py
core/: config.py  logging.py
db/: session.py
docker/: Dockerfile
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/api/: axiosClient.ts  chatApi.ts  conversationApi.ts  documentApi.ts  downloadApi.ts
frontend/src/components/Chat/ChatWindow/: index.tsx
frontend/src/components/Chat/MessageBubble/: index.tsx
frontend/src/components/ConversationList/: index.tsx
frontend/src/components/Dialogs/: UploadDocumentModal.tsx
frontend/src/components/DownloadMenu/: index.tsx
frontend/src/components/SearchBar/: index.tsx
frontend/src/hooks/: useConversations.ts
frontend/src/pages/: ChatPage.tsx  MainLayout.tsx
frontend/src/store/: useChatStore.ts
frontend/src/types/: index.ts
graph/: builder.py  state.py
graph/nodes/: router.py
mcp/: clients.py  db_server.py  es_server.py
mcp_integration/: clients.py  db_server.py  es_server.py
models/: __init__.py  chat.py  user.py
router/: graph.py  prompt.py  router.py  schema.py  workflows.py
scripts/: ingest.py
services/: document_loader.py  indexer.py  retriever.py
tests/: test_router.py
workflows/: __init__.py  finance.py  general.py  hr.py  it.py  registry.py
(+7 files in other folders)
