[project]
name = "my-ai-chatbot"
version = "0.1.0"
description = "Multi-Agent AI Chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.0.31",
    "langchain>=0.1.13",
    "langchain-community>=0.0.29",
    "langchain-core>=0.1.33",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "elasticsearch>=8.13.0",
    "loguru>=0.7.2",
    "pyjwt>=2.8.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "langchain-elasticsearch>=1.0.0",
    "langchain-ollama>=1.1.0",
    "pypdf>=6.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "black>=24.3.0",
]
